Corrección de celda Variables y Tipos

--- a/Semana01_Introduccion.ipynb
+++ b/Semana01_Introduccion.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP93TW8IRZUQKHZ5gKarh2F",
+      "authorship_tag": "ABX9TyPA+itLoeQkKwS5RN3LcIIC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,23 +77,23 @@
         "\n",
         "# ¡Podemos usar las variables en una frase!\n",
         "print(f\"La fórmula contiene {cantidad_ingrediente} gramos de {nombre_ingrediente}.\")\n",
-        "print(f\"Las {muestras_ingrediente} son de contenido orgánico? R/ {es_compuesto_organico}\")"
+        "print(f\"Las {muestras_ingrediente} muestras son de contenido orgánico? R/ {es_compuesto_organico}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yBc8Ud88_yj7",
-        "outputId": "2ef51476-f07c-44f2-e1c7-986c5afbe838"
+        "outputId": "4ab6524b-1790-40ad-c135-bbf24f11bee7"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "La fórmula contiene 50.5 gramos de ácido hialurónico.\n",
-            "Las 4 son de contenido orgánico? R/ True\n"
+            "Las 4 muestras son de contenido orgánico? R/ True\n"
           ]
         }
       ]
@@ -173,7 +172,7 @@
         "id": "UNNXdXOLCVXP",
         "outputId": "26db9109-2abf-4907-e0e5-0591f6b1b810"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +222,7 @@
         "id": "l4c6aMOQDJG4",
         "outputId": "06b63d7e-af73-46b7-eefc-5f27d99d916c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +279,7 @@
         "id": "w4rr8hVhDXic",
         "outputId": "1e05c907-536e-4f7f-b803-591467055ce8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +341,7 @@
         "id": "WUYaMo0mD73H",
         "outputId": "fb2c79ed-d91d-414d-942d-3ce7fcc31ed5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +367,7 @@
         "id": "t7HeHZPVD93e",
         "outputId": "1c689c70-658f-4df9-fe68-d0d7f19c2ba4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +428,7 @@
         "id": "Ec7robgeEoV1",
         "outputId": "f88dbadd-232e-46af-d256-87e0c30d7151"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +489,7 @@
         "id": "lXfXb1dIE0cx",
         "outputId": "fbd0d907-37fd-460d-a3b6-365214e33196"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +517,7 @@
         "id": "4rTmzMxrE3k2",
         "outputId": "936c82c9-864c-40da-e6d0-6074134f765c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +895,7 @@
         "id": "K0MzbPDGE8-7",
         "outputId": "83c9338a-0613-4012-ae94-1aeebaf70958"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
