Actualizar sección de condicionales

--- a/Semana01_Introduccion.ipynb
+++ b/Semana01_Introduccion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPA+itLoeQkKwS5RN3LcIIC",
+      "authorship_tag": "ABX9TyMhyG0BzWgZnYfjf/jykD3Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,17 +151,22 @@
       "cell_type": "code",
       "source": [
         "# Una lista de ingredientes en mililitros\n",
-        "ingredientes_ml = [20, 15, 30]\n",
-        "\n",
+        "ingredientes_ml = [20, 15, 30] # 3 posiciones\n",
+        "# Posiciones        0  1   2\n",
+        "# Nota importante: ¡Python empieza a contar desde 0!\n",
         "# La lista también puede tener elementos de diferentes tipos\n",
+        "\n",
+        "# Un diccionario con información de un producto\n",
         "informacion_producto = {\"Nombre\":\"suero\",\n",
         "                        \"Volumen\": 50,\n",
         "                        \"Unidad\": \"mL\",\n",
         "                        \"Es_Vegano\": True\n",
         "                        }\n",
+        "# Los elementos de un diccionario se identifican con claves y se les asocian valores\n",
+        "# clave:valor\n",
         "\n",
-        "\n",
-        "print(f\"Primer ingrediente: {ingredientes_ml[0]} ml\") # Nota importante: ¡Python empieza a contar desde 0!\n",
+        "# Las listas se acceden con el número de la posición\n",
+        "print(f\"Primer ingrediente: {ingredientes_ml[0]} ml\")\n",
         "# Los diccionarios se acceden con el nombre de la clave.\n",
         "print(f\"Volumen del producto: {informacion_producto['Volumen']} {informacion_producto['Unidad']}\")"
       ],
@@ -170,15 +175,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UNNXdXOLCVXP",
-        "outputId": "26db9109-2abf-4907-e0e5-0591f6b1b810"
+        "outputId": "822e8b33-b567-4a0a-a5b2-d2da1aedfcf5"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Primer ingrediente: 20ml\n",
+            "Primer ingrediente: 20 ml\n",
             "Volumen del producto: 50 mL\n"
           ]
         }
@@ -186,12 +191,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Modificar el valor de una lista\n",
+        "ingredientes_ml[1] = 25 # Cambiamos el valor en la posición 1\n",
+        "\n",
+        "# Modificar el valor de un diccionario\n",
+        "informacion_producto[\"Volumen\"] = 55 # Cambiabmos el valor de la clave \"Volumen\"\n",
+        "\n",
+        "print(ingredientes_ml)\n",
+        "print(informacion_producto)"
+      ],
       "metadata": {
-        "id": "XkGNxF41C_St"
+        "id": "XkGNxF41C_St",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6306b48-cf7c-45f4-9d7a-463ebb811bc8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20, 25, 30]\n",
+            "{'Nombre': 'suero', 'Volumen': 55, 'Unidad': 'mL', 'Es_Vegano': True}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -206,9 +233,42 @@
     {
       "cell_type": "code",
       "source": [
+        "# Verificar que un producto tenga las unidades correctas\n",
+        "producto_suero = {\n",
+        "    \"nombre\":\"Suero A\",\n",
+        "    \"cantidad\": 200,\n",
+        "    \"unidades\":\"g\" # Asumimos que debe ser en mL, por lo que este está mal\n",
+        "}\n",
+        "\n",
+        "# Usamos condicional simple con la palabra reservada if\n",
+        "if producto_suero[\"unidades\"] != \"mL\":\n",
+        "  print(f\"El producto {producto_suero[\"nombre\"]} debe estar en mL.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rRvRw7BLxC7J",
+        "outputId": "4b6538bc-46d6-458b-819d-0b91b7a495bd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El producto Suero A debe estar en mL.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Decidimos si un producto está aprobado para la venta\n",
         "ph_producto = 5.5\n",
         "\n",
+        "# Usamos condicional if-else\n",
         "# Usamos la palabra reservada if y la palabra reservada else en este caso.\n",
         "if ph_producto >= 4.5 and ph_producto <= 6.5:\n",
         "    print(\"El producto tiene un pH adecuado. ¡Aprobado para la venta!\")\n",
@@ -229,6 +289,39 @@
           "name": "stdout",
           "text": [
             "El producto tiene un pH adecuado. ¡Aprobado para la venta!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Verificamos si el tamaño de partícula lleva a una dispersión coloidal o una suespensión\n",
+        "tamano_particula = 50 # nanometros\n",
+        "\n",
+        "# Usamos condicional if-elif-else\n",
+        "# Usamos las palabras reservadas if, elif y else en este caso\n",
+        "if tamano_particula > 100:\n",
+        "  print(\"La dispersión es una suspensión.\")\n",
+        "elif tamano_particula <= 100 and tamano_particula > 1:\n",
+        "  print(\"La dispersión es coloidal.\")\n",
+        "else:\n",
+        "  print(\"No se identifica el tipo de dispersión\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EROoeUDPyDKh",
+        "outputId": "7a772ecf-3dad-4252-9597-aa7322cb656f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La dispersión es coloidal.\n"
           ]
         }
       ]
