Incluir ciclo infinito

--- a/Semana01_Introduccion.ipynb
+++ b/Semana01_Introduccion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhyG0BzWgZnYfjf/jykD3Y",
+      "authorship_tag": "ABX9TyNBATuJ9RIt0MzmRPp531r3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
         "id": "yBc8Ud88_yj7",
         "outputId": "4ab6524b-1790-40ad-c135-bbf24f11bee7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "id": "UNNXdXOLCVXP",
         "outputId": "822e8b33-b567-4a0a-a5b2-d2da1aedfcf5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         },
         "outputId": "f6306b48-cf7c-45f4-9d7a-463ebb811bc8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "id": "rRvRw7BLxC7J",
         "outputId": "4b6538bc-46d6-458b-819d-0b91b7a495bd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "id": "EROoeUDPyDKh",
         "outputId": "7a772ecf-3dad-4252-9597-aa7322cb656f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,12 +398,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# CASO ESPECIAL DEL CICLO WHILE\n",
+        "# Definimos un ciclo infinto\n",
+        "\n",
+        "num_lote = 100\n",
+        "while (True):\n",
+        "  print(f\"Revisando el lote número {num_lote}...\")\n",
+        "  if num_lote == 109:\n",
+        "    print(f\"Lote {num_lote} encontrado.\")\n",
+        "    break # Esta palabra reservada rompe cualquier ciclo\n",
+        "\n",
+        "  num_lote = num_lote + 1\n"
+      ],
       "metadata": {
-        "id": "uk2Kz-2CD1K-"
+        "id": "uk2Kz-2CD1K-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96d6af9e-ce09-4d71-832e-76f4da6f83a1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Revisando el lote número 100...\n",
+            "Revisando el lote número 101...\n",
+            "Revisando el lote número 102...\n",
+            "Revisando el lote número 103...\n",
+            "Revisando el lote número 104...\n",
+            "Revisando el lote número 105...\n",
+            "Revisando el lote número 106...\n",
+            "Revisando el lote número 107...\n",
+            "Revisando el lote número 108...\n",
+            "Revisando el lote número 109...\n",
+            "Lote 109 encontrado.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
